examples/datalog/14_aggregations/33_avg_non_integer.dl.out
Connecting to server at http://127.0.0.1:8080...
Connected!

Server status: healthy
Current knowledge graph: default

> .kg create test_avg_frac
Knowledge graph 'test_avg_frac' created.
Switched to knowledge graph: test_avg_frac
> .kg use test_avg_frac
Switched to knowledge graph: test_avg_frac
> +vals[(1,), (2,), (3,), (4,)].
Inserted 4 fact(s) into 'vals'.
> +avg_result(<AVG:X>) :- vals(X).
Script error: Parse error: Invalid term: '<AVG:X>'
