examples/datalog/14_aggregations/33_avg_non_integer.dl
% Test: AVG producing non-integer result
% Expected: Fractional average works
% Category: 14_aggregations
% Priority: P2 - Aggregation correctness

.kg create test_avg_frac
.kg use test_avg_frac

+vals[(1,), (2,), (3,), (4,)].

% Average is 2.5
+avg_result(<AVG:X>) :- vals(X).

?- avg_result(R).

% Another example: 1+2+3 = 6 / 3 = 2.0
+vals2[(1,), (2,), (3,)].

+avg_result2(<AVG:X>) :- vals2(X).

?- avg_result2(R).

.kg use default
.kg drop test_avg_frac
